apps/kite/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kite
  namespace: apps
  labels:
    app: kite
spec:
  selector:
    app: kite
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
